--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,15 +4,11 @@
     "node": true
   },
   "extends": "standard-with-typescript",
-  "overrides": [
-  ],
+  "overrides": [],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": [
-    "@typescript-eslint"
-  ],
-  "rules": {
-  }
+  "plugins": ["@typescript-eslint"],
+  "rules": {}
 }
