--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/http/server.ts",
+    "dev": "nodemon src/shared/http/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
     "typeorm:migrate": "ts-node-dev ./node_modules/typeorm/cli migration:run -d ./src/shared/typeorm/data-source.ts"
   },
@@ -23,8 +23,9 @@
     "eslint-plugin-n": "^15.3.0",
     "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-promise": "^6.1.0",
+    "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
-    "ts-node-dev": "^2.0.0",
+    "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.0",
     "typescript": "^4.8.4"
   },
