--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/node": "^18.8.4",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "bcrypt": "^5.1.0",
     "eslint": "^8.25.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
